--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -10,6 +10,10 @@
 				= article.text
 			%td
 				= article.created_at.strftime("%d.%m.%Y")
+			%td
+				-# = image_tag article.image_url()
+			%td
+				= link_to 'Show', article_path(article)
 		-# %td
 		-# 	-# = article.image_tag painting.image_url
 		-# %td
