--- a/app/views/articles/new.haml
+++ b/app/views/articles/new.haml
@@ -1,7 +1,7 @@
 %h1 добавить статью~
 
 
-= form_for :article, url: articles_path do |f|
+= form_for @article, url: articles_path do |f|
 	%p
 		= f.label :title
 		%br
@@ -17,10 +17,10 @@
 	-# 	%br
 	-# 	= f.file_field :image_thumb
 	-#
-	-# %p
-	-# 	= f.label :image
-	-# 	%br
-	-# 	= f.file_field :image
+	%p
+		= f.label :image
+		%br
+		= f.file_field :image
 
 
 	%p
