--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -11,7 +11,7 @@
 			%td
 				= article.created_at.strftime("%d.%m.%Y")
 			%td
-				-# = image_tag article.image_url()
+				= image_tag article.image.url
 			%td
 				= link_to 'Show', article_path(article)
 		-# %td
