--- a/app/views/articles/new.haml
+++ b/app/views/articles/new.haml
@@ -1,7 +1,7 @@
-%h1 добавить статью~
+%h1 добавить статью
 
 
-= form_for @article, url: articles_path do |f|
+= form_for :article, url: articles_path, html: { multipart: true } do |f|
 	%p
 		= f.label :title
 		%br
@@ -12,15 +12,15 @@
 		%br
 		= f.text_area :text
 
-	-# %p
-	-# 	= f.label :image_thumb
-	-# 	%br
-	-# 	= f.file_field :image_thumb
-	-#
 	%p
 		= f.label :image
 		%br
 		= f.file_field :image
+
+	-# %p
+	-# 	= f.label :image
+	-# 	%br
+	-# 	= f.file_field :image
 
 
 	%p
