frendurrl and two img

--- a/app/views/articles/new.haml
+++ b/app/views/articles/new.haml
@@ -17,10 +17,10 @@
 		%br
 		= f.file_field :image
 
-	-# %p
-	-# 	= f.label :image
-	-# 	%br
-	-# 	= f.file_field :image
+	%p
+		= f.label :image_thumb
+		%br
+		= f.file_field :image_thumb
 
 
 	%p
