--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -13,6 +13,8 @@
 			%td
 				= image_tag article.image.url
 			%td
+				= image_tag article.image_thumb.url
+			%td
 				= link_to 'Show', article_path(article)
 		-# %td
 		-# 	-# = article.image_tag painting.image_url
