--- a/app/views/articles/index.haml
+++ b/app/views/articles/index.haml
@@ -11,9 +11,9 @@
 			%td
 				= article.created_at.strftime("%d.%m.%Y")
 			%td
-				= image_tag article.image.url
+				= image_tag attachment_url(article, :image, :fill, 500, 150, format: "jpg")
 			%td
-				= image_tag article.image_thumb.url
+				= image_tag attachment_url(article, :image_thumb, :fill, 500, 150, format: "jpg")
 			%td
 				= link_to 'Show', article_path(article)
 		-# %td
