--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,8 +1,8 @@
 %h1 Главная
 
 
-=link_to 'Статьи', controller: 'articles'
+=link_to 'Статьи', namespace: 'web', controller: 'articles'
 
-=link_to 'Новости', controller: 'news'
+=link_to 'Новости', namespace: 'web', controller: 'news'
 
-=link_to 'Акции', controller: 'stock'
+=link_to 'Акции', namespace: 'web', controller: 'stock'
