--- a/app/views/web/articles/index.haml
+++ b/app/views/web/articles/index.haml
@@ -15,10 +15,6 @@
 			%td
 				= image_tag attachment_url(article, :image_thumb, :fill, 500, 150, format: "jpg")
 			%td
-				= link_to 'Show', [:web, article]
-		-# %td
-		-# 	-# = article.image_tag painting.image_url
-		-# %td
-		-# 	-# = article.text
+				= link_to 'Show', article
 
 = paginate @articles
