--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,6 +5,7 @@
     %meta{ :content => "", :name => "description" }
     %meta{ :content => "", :name => "author" }
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
+    -# = javascript_include_tag 'application'
   %body
 
     = yield
