--- a/app/views/web/news/index.haml
+++ b/app/views/web/news/index.haml
@@ -1,1 +1,20 @@
 %h1 НОВОСТИ index.haml
+
+
+%table
+	= @news.each do |new_item|
+		%tr
+			%td
+				= new_item.title
+			%td
+				= new_item.text
+			%td
+				= new_item.created_at.strftime("%d.%m.%Y")
+			%td
+				= image_tag attachment_url(new_item, :image, :fill, 500, 150, format: "jpg")
+			%td
+				= image_tag attachment_url(new_item, :image_thumb, :fill, 500, 150, format: "jpg")
+			%td
+				= link_to 'Show', new_item
+
+= paginate @news
