--- a/app/views/admin/articles/index.haml
+++ b/app/views/admin/articles/index.haml
@@ -1,8 +1,8 @@
-%h1 СТАТЬИ index.haml
+%h1 СТАТЬИ_ад index.haml
 
 
 %table
-  = @articles.each do |article|
+  - @articles.each do |article|
     %tr
       %td
         = article.title
@@ -16,5 +16,7 @@
         = image_tag attachment_url(article, :image_thumb, :fill, 500, 150, format: "jpg")
       %td
         = link_to 'edit', [:edit, :admin, article]
+      %td
+        = link_to 'destroy', [:admin, article], :authenticity_token => form_authenticity_token() ,  method: :delete, data: { confirm: 'Are you sure?' }
 
 = paginate @articles
